Added switchChain and addChain methods

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
               Create ERC721 With Meks Assets
             </button>
 
+            <button class="btn btn-primary" id="btn-switch2Eth">
+              Switch to Eth
+            </button>
+
+            <button class="btn btn-primary" id="btn-addChain">
+              Add Chain
+            </button>
+
             <hr>
 
             <div id="network">
